# plugins

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.mod
cmake/Modules/: FindLua.cmake
include/: plugin_i.h  util.h
lib/dyncall/test/: GNUmakefile
mod/: lua.c
mod/lua/: CMakeLists.txt  lua.c  test_lua.mod
src/: Function.cpp  Function.h  Invoker.cpp  Invoker.h  Plugin.cpp  Plugin.h  PluginDescription.cpp  PluginDescription.h  PluginLibrary.cpp  PluginLibrary.h  PluginManager.cpp  PluginManager.h  function.cpp  function.hpp  invocation.cpp  invocation.hpp  invoker.cpp  invoker.hpp  loader.cpp  plugin.cpp  plugin.hpp  plugin_description.cpp  plugin_description.hpp  plugin_library.cpp  plugin_library.hpp  plugin_manager.cpp  plugin_manager.hpp  util.h
src/mod/c/: CMakeLists.txt  c.c  test_c.mod
src/mod/lua/: CMakeLists.txt  lua.c  test.lua  test_lua.mod
